Added packages for empty classes